.local-dev/manifest/ns-system/services/ns-auth-dev-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ns-auth-dev

spec:
  forwardAuth:
    address: http://ns-auth-dev.ns-system.svc.cluster.local/
    authResponseHeaders:
      - X-Showcase-User
