.local-dev/manifest/ns-system/services/ns-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ns-auth

spec:
  forwardAuth:
    address: http://ns-auth.ns-system.svc.cluster.local/
    authResponseHeaders:
      - X-Showcase-User
