.local-dev/manifest/ns-system/services/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: dockette/adminer:full
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: node-role.kubernetes.io/master
#                    operator: Exists
#      tolerations:
#        - key: node-role.kubernetes.io/master
#          operator: Exists
#          effect: NoSchedule
