.local-dev/manifest/ns-system/services/mariadb-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb

spec:
  replicas: 1
  serviceName: mariadb
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10
          args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
          ports:
            - name: mariadb
              containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadata
          resources:
            limits:
              memory: 512Mi
      # nodeSelector:
      #   neoshowcase.trap.jp/db-node: "true"
      volumes:
        - name: mariadata
          hostPath:
            path: /opt/mariadb
