.local-dev/manifest/ns-system/services/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio

spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          volumeMounts:
            - name: minio-data
              mountPath: /data
          ports:
            - containerPort: 9000
              name: backend
            - containerPort: 9001
              name: console
      volumes:
        - name: minio-data
          hostPath:
            path: /opt/minio
