.local-dev/manifest/ns-system/services/mongo-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo

spec:
  replicas: 1
  serviceName: mongo
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6
          args:
            - "mongod"
            - "--auth"
            - "--bind_ip_all"
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
          resources:
            limits:
              memory: 512Mi
      # nodeSelector:
      #   neoshowcase.trap.jp/db-node: "true"
      volumes:
        - name: mongodb-data
          hostPath:
            path: /opt/mongo
