.local-dev/manifest/ns-system/services/ns-auth-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-auth-dev

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-auth-dev
  template:
    metadata:
      labels:
        app: ns-auth-dev
    spec:
      containers:
        - name: ns-auth-dev
          image: ghcr.io/traptitech/ns-auth-dev:main
          imagePullPolicy: Never
          ports:
            - containerPort: 4181
              name: http
