.local-dev/manifest/ns-system/services/registry-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-frontend
  template:
    metadata:
      labels:
        app: registry-frontend
    spec:
      containers:
        - name: registry-frontend
          image: konradkleine/docker-registry-frontend:v2
          ports:
            - containerPort: 80
              name: http
