.local-dev/manifest/ns-system/services/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer

spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
