.local-dev/manifest/ns-system/services/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio

spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: backend
      port: 80
      targetPort: backend
    - name: console
      port: 9001
      targetPort: console
