.local-dev/manifest/ns-system/services/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo

spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
