.local-dev/manifest/ns-system/services/ns-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-auth

spec:
  type: ClusterIP
  selector:
    app: ns-auth
  ports:
    - port: 80
      targetPort: http
      name: http
