.local-dev/manifest/ns-system/services/registry-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-frontend

spec:
  type: ClusterIP
  selector:
    app: registry-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
