.local-dev/manifest/ns-system/services/registry-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`registry.local.trapti.tech`)
      services:
        - namespace: ns-system
          kind: Service
          name: registry
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
